# rp2040-lvgl

./: .gitignore  .gitmodules  README.md
rgb_screen/: CMakeLists.txt  move_uf2.sh
rgb_screen/assets/battery/: battery_10.c  battery_25.c  battery_50.c  battery_75.c  battery_full.c  battery_low.c
rgb_screen/assets/indicators/: left_indicator_act.c  left_indicator_emerg.c  left_indicator_empty.c
rgb_screen/conf/: lv_conf.h
rgb_screen/include/: gpio_indicator.h  low_pass_filter.h  lv_port_disp.h  lv_screen.h  motor.h  spi0_dma.h  throttle.h  turtle.h
rgb_screen/screen/: battery.c  battery.h  indicators.c  indicators.h
rgb_screen/src/: gpio_indicator.c  low_pass_filter.c  lv_port_disp.c  lv_screen.c  main.c  motor.c  spi0_dma.c  throttle.c  turtle.c
